--- a/src/app/common-ui/profile-card/profile-card.component.html
+++ b/src/app/common-ui/profile-card/profile-card.component.html
@@ -1,30 +1,26 @@
+@if (profile) {
 <div class="profile-card">
   <div class="avatar-name">
-    <img
-      src="/assets/images/real.jpg"
-      alt="Avatar"
-      class="profile-card__avatar"
-    />
+    <img [src]="profile.avatarUrl | imgUrl" [alt]="profile.username" class="profile-card__avatar" />
 
     <div class="profile-card__name">
-      <strong>John Doe</strong>
-      <span class="nickname">JD</span>
+      <strong>{{ profile.firstName }} {{ profile.lastName }}</strong>
+      <span class="nickname">{{ profile.username }}</span>
     </div>
   </div>
 
   <div class="profile-card_description">
-    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore, nisi
-    maxime explicabo asperiores dolor expedita cum non nesciunt!
+    {{ profile.description }}
   </div>
 
   <div class="profile-card_tags">
-    <div class="skill-tag">Ruby</div>
-    <div class="skill-tag">React</div>
-    <div class="skill-tag">Angular</div>
-    <div class="skill-tag">Python</div>
+    @for (skill of profile.stack; track skill) {
+    <div class="skill-tag">{{ skill }}</div>
+    }
   </div>
 
   <div class="profile-card_action_buttons">
     <button class="btn">Subscribe</button>
   </div>
 </div>
+} @else { Not found }
